VH26-RAPID-REBELS-main/VH26-RAPID-REBELS-main/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datastream-ingress
  namespace: datastream
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: datastream.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: go-producer
            port:
              number: 8080
  - host: grafana.datastream.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
  - host: intelligence.datastream.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: intelligence-pipeline
            port:
              number: 8081
  - host: prometheus.datastream.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
